@startuml

title __BLOCKCHAIN's Class Diagram__\n

  namespace  blockchain{
    namespace om.app.blockchain {
      class com.app.blockchain.BlockchainApplication {
          + BlockchainApplication()
          {static} + main()
          + run()
      }
    }
  }
  

  namespace  RestClient{
    namespace om.app.blockchain {
      class com.app.blockchain.RestClient {
          {static} - ADD_NODE_API : String
          {static} - CREATE_NEW_BLOCK_API : String
          {static} - GET_ALL_BLOCKS_API : String
          {static} - GET_LAST_BLOCK_API : String
          {static} - GET_URLS_NODES_API : String
          {static} - SAVE_BLOCKCHAIN_API : String
          {static} - SAVE_BLOCK_API : String
          {static} - restTemplate : RestTemplate
          {static} + CallCreateNewBlockAPI()
          {static} + CallGetAllBlocksAPI()
          {static} + CallGetLastBlockAPI()
          {static} + callGetAllUrlsNodesAPI()
          {static} + callSaveBlockAPI()
          {static} + callSaveBlockchainAPI()
          {static} + main()
          {static} - callAddNodeAPI()
      }
    }
  }
  

  com.app.blockchain.BlockchainApplication .up.|> org.springframework.boot.CommandLineRunner
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.repository.IBlockRepository : blockRepository
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.repository.INodeRepository : nodeRepository
  com.app.blockchain.BlockchainApplication o-- com.app.blockchain.service.INodeService : nodeService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
